Fixed panel spacing. Updated packages.

--- a/src/components/panels/Layer.less
+++ b/src/components/panels/Layer.less
@@ -7,6 +7,7 @@
     background-color: @bg-color3;
     border-bottom: 1px solid @border-color;
     padding: 5px;
+    margin: 0 5px;
     position: relative;
     cursor: default;
 
