--- a/src/components/panels/LayersPanel.less
+++ b/src/components/panels/LayersPanel.less
@@ -8,5 +8,4 @@
 .layers {
     flex: 1;
     overflow: auto;
-    margin: 0 5px 6px 5px;
 }
